[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/Spaceship_art_pack_2/B12.png" type="Texture" id=1]
[ext_resource path="res://Scripts/WaveEnemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="WaveEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="Sprite" groups=[
"Enemy",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
scale = Vector2( 3.65948, 4.37721 )
shape = SubResource( 1 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="area_entered" from="Sprite/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
